--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,3 +21,24 @@
 .CardColor {
   border:1px solid #50351C;
 }
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th,
+td {
+  border: 1px solid #5c4337;
+  text-align: center;
+  padding: 8px;
+  font-size: 20px;
+}
+
+th {
+  background-color: rgb(255, 255, 255);
+}
+
+td {
+  background-color: rgb(138, 96, 73);
+}
+
